fix(*): fix center align register button BIX-1023

--- a/shared/pages/landing/landing.module.scss
+++ b/shared/pages/landing/landing.module.scss
@@ -112,6 +112,13 @@
   .learnMoreBtn {
     color: white;
     margin-left: 70px;
+    @media screen and (max-width: 960px) {
+      margin-top: 2rem;
+      margin-left: 0;
+    }
+  }
+  .registerBtn {
+    justify-content: center;
   }
 }
 
